--- a/app/src/main/res/layout/activity_pantalla1.xml
+++ b/app/src/main/res/layout/activity_pantalla1.xml
@@ -18,7 +18,8 @@ android:background="@android:color/white">
             android:id="@+id/Linear1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_margin="10dp">
 
             <RelativeLayout
                 android:id="@+id/relative1"
@@ -32,7 +33,9 @@ android:background="@android:color/white">
                 <RelativeLayout
                     android:id="@+id/relative2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:padding="10dp">
+
 
                     <RelativeLayout
                         android:id="@+id/rl_15"
@@ -90,7 +93,8 @@ android:background="@android:color/white">
                     android:id="@+id/relative3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/relative2">
+                    android:layout_below="@id/relative2"
+                    android:padding="10dp">
 
                     <RelativeLayout
                         android:id="@+id/rl_5"
@@ -154,7 +158,9 @@ android:background="@android:color/white">
                 <RelativeLayout
                     android:id="@+id/relative2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:padding="10dp">
+
 
                     <RelativeLayout
                         android:id="@+id/rl_15"
@@ -212,7 +218,8 @@ android:background="@android:color/white">
                     android:id="@+id/relative3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/relative2">
+                    android:layout_below="@id/relative2"
+                    android:padding="10dp">
 
                     <RelativeLayout
                         android:id="@+id/rl_5"
@@ -276,7 +283,9 @@ android:background="@android:color/white">
                 <RelativeLayout
                     android:id="@+id/relative2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:padding="10dp">
+
 
                     <RelativeLayout
                         android:id="@+id/rl_15"
@@ -334,7 +343,8 @@ android:background="@android:color/white">
                     android:id="@+id/relative3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/relative2">
+                    android:layout_below="@id/relative2"
+                    android:padding="10dp">
 
                     <RelativeLayout
                         android:id="@+id/rl_5"
@@ -398,7 +408,9 @@ android:background="@android:color/white">
                 <RelativeLayout
                     android:id="@+id/relative2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:padding="10dp">
+
 
                     <RelativeLayout
                         android:id="@+id/rl_15"
@@ -456,7 +468,8 @@ android:background="@android:color/white">
                     android:id="@+id/relative3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/relative2">
+                    android:layout_below="@id/relative2"
+                    android:padding="10dp">
 
                     <RelativeLayout
                         android:id="@+id/rl_5"
@@ -520,7 +533,9 @@ android:background="@android:color/white">
                 <RelativeLayout
                     android:id="@+id/relative2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:padding="10dp">
+
 
                     <RelativeLayout
                         android:id="@+id/rl_15"
@@ -578,7 +593,8 @@ android:background="@android:color/white">
                     android:id="@+id/relative3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/relative2">
+                    android:layout_below="@id/relative2"
+                    android:padding="10dp">
 
                     <RelativeLayout
                         android:id="@+id/rl_5"
@@ -642,7 +658,9 @@ android:background="@android:color/white">
                 <RelativeLayout
                     android:id="@+id/relative2"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:padding="10dp">
+
 
                     <RelativeLayout
                         android:id="@+id/rl_15"
@@ -700,7 +718,8 @@ android:background="@android:color/white">
                     android:id="@+id/relative3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/relative2">
+                    android:layout_below="@id/relative2"
+                    android:padding="10dp">
 
                     <RelativeLayout
                         android:id="@+id/rl_5"
@@ -752,128 +771,7 @@ android:background="@android:color/white">
 
 
             </RelativeLayout>
-            <RelativeLayout
-                android:id="@+id/relative1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_margin="10dp">
 
-                <RelativeLayout
-                    android:id="@+id/relative2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <RelativeLayout
-                        android:id="@+id/rl_15"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_margin="10dp">
-                        <ImageView
-                            android:id="@+id/img_16"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/icons8_usuario_masculino_96"
-                            />
-                    </RelativeLayout>
-
-
-                    <RelativeLayout
-                        android:id="@+id/rl_17"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/rl_15"
-                        android:layout_toRightOf="@+id/rl_15"
-                        android:layout_toEndOf="@+id/rl_15">
-                        <TextView
-                            android:id="@+id/text_18"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/txt10"
-                            android:textColor="@android:color/holo_blue_light"
-                            android:textSize="20sp"
-                            android:textStyle="bold"
-
-                            />
-                        <TextView
-                            android:id="@+id/text_19"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/txt11"
-                            android:textColor="@android:color/black"
-                            android:textSize="13sp"
-                            android:textStyle="bold"
-                            android:layout_below="@id/text_18"/>
-                    </RelativeLayout>
-
-
-
-
-
-
-                </RelativeLayout>
-
-                <RelativeLayout
-                    android:id="@+id/relative3"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@id/relative2">
-
-                    <RelativeLayout
-                        android:id="@+id/rl_5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_alignParentLeft="true"
-                        android:layout_alignParentStart="true"
-                        android:layout_margin="10dp">
-                        <ImageView
-                            android:id="@+id/img_6"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@drawable/dormir"/>
-                    </RelativeLayout>
-
-
-                    <RelativeLayout
-                        android:id="@+id/rl_7"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_alignBottom="@+id/rl_5"
-                        android:layout_toRightOf="@+id/rl_5"
-                        android:layout_toEndOf="@+id/rl_5">
-                        <TextView
-                            android:id="@+id/text_8"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/txt1"
-                            android:textColor="@android:color/holo_blue_light"
-                            android:textSize="20sp"
-                            android:textStyle="bold"
-
-                            />
-                        <TextView
-                            android:id="@+id/text_9"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/txt_1"
-                            android:textColor="@android:color/black"
-                            android:textSize="13sp"
-                            android:textStyle="bold"
-                            android:layout_below="@id/text_8"/>
-                    </RelativeLayout>
-
-
-                </RelativeLayout>
-
-
-
-            </RelativeLayout>
 
 
 
